# NoHate

./: .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties  nohate  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/nohate/app/: NativeClassifierInstrumentedTest.kt  ScanWorkerInstrumentedTest.kt  SecureStoreInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llamabridge.cpp
app/src/main/java/com/nohate/app/: MainActivity.kt  NativeClassifier.kt
app/src/main/java/com/nohate/app/auth/: OAuthCallbackActivity.kt  SessionLoginActivity.kt
app/src/main/java/com/nohate/app/data/: FlaggedItem.kt  ScanStat.kt  SecureStore.kt
app/src/main/java/com/nohate/app/llm/: LlamaBridge.kt  LlmDownloader.kt  LlmEngine.kt
app/src/main/java/com/nohate/app/ml/: ClassifierEngine.kt
app/src/main/java/com/nohate/app/platform/: InstagramGraph.kt  InstagramIntents.kt  InstagramProvider.kt  PostImporter.kt  Provider.kt
app/src/main/java/com/nohate/app/ui/: AccountsScreen.kt  ConsoleScreen.kt  MainActivityMetrics.kt  ManualTestScreen.kt  OnboardingScreen.kt  ReviewScreen.kt  SettingsScreen.kt
app/src/main/java/com/nohate/app/work/: ScanWorker.kt
app/src/main/res/values/: strings.xml  themes.xml
rust/core/: Cargo.toml
rust/core/src/: lib.rs
scripts/: build_rust_android.sh  open_android_studio.sh  run_on_emulator.sh
